gccida/c1/compute_pre_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_pre_data/src/gcse.c:4964:1: error: use of undeclared identifier 'edge_list_0'; did you mean 'edge_list'?
edge_list_0 = pre_edge_lcm( gcse_file, n_exprs, transp, comp, antloc, ae_kill, &pre_insert_map, &pre_delete_map); 
^~~~~~~~~~~
edge_list
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_pre_data/src/gcse.c:4395:26: note: 'edge_list' declared here
static struct edge_list *edge_list;
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_pre_data/src/obj/gcse.o] Error 1
